Updated map with usable marker

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,7 @@
     "semi": [2, "always"],
     "space-before-function-paren": 0,
     "react/prop-types": 0,
-    "comma-dangle": [2, "always-multiline"]
+    "comma-dangle": 0
   },
   "settings": {
     "react": {
