--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.4.1",
     "google-map-react": "^1.1.5",
     "react": "^16.12.0",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-google-maps": "^9.4.5",
