--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "semantic-ui-react": "^0.88.2",
     "uuid": "^3.4.0"
   },
   "scripts": {
