--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-google-maps/api": "^1.8.2",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/googlemaps": "^3.39.3",
+    "@types/markerclustererplus": "^2.1.33",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
-    "google-map-react": "^1.1.5",
-    "react": "^16.12.0",
-    "react-animations": "^1.0.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
+    "google-map-react": "^1.1.7",
+    "minimist": "^1.2.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
     "react-loading": "^2.0.3",
     "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.1",
     "semantic-ui-react": "^0.88.2",
+    "typescript": "^3.8.3",
     "uuid": "^3.4.0"
   },
   "scripts": {
@@ -45,11 +45,11 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-node": "^11.0.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-standard": "^4.0.1"
   }
 }
